--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "build": "tsc && ncc build ./lib/index.js -o ./dist"
   },
   "devDependencies": {
-    "@actions/core": "^1.2.3",
-    "@actions/github": "^2.1.1",
-    "@types/node": "^13.7.0",
-    "@zeit/ncc": "^0.22.0",
-    "typescript": "^3.8.3"
+    "@actions/core": "^1.2.5",
+    "@actions/github": "^2.2.0",
+    "@types/node": "^13.13.21",
+    "@zeit/ncc": "^0.22.3",
+    "ts-lint": "^4.5.1",
+    "typescript": "^4.0.2"
   }
 }
