Update dependencies and use NPM instead of yarn

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "actions-no-fixup",
-  "version": "1.0.3",
+  "name": "actions-wip",
+  "version": "1.0.4",
   "description": "Reject pull request with 'fixup' commits",
-  "repository": "https://github.com/Dcode-Evo/actions-no-fixup.git",
+  "repository": "https://github.com/Dcode-Evo/actions-wip.git",
   "author": "alek <alekart@users.noreply.github.com>",
   "license": "MIT",
   "private": true,
@@ -10,11 +10,11 @@
     "build": "tsc && ncc build ./lib/index.js -o ./dist"
   },
   "devDependencies": {
-    "@actions/core": "^1.2.6",
+    "@actions/core": "^1.6.0",
     "@actions/github": "^2.2.0",
-    "@types/node": "^13.13.21",
-    "@zeit/ncc": "^0.22.3",
+    "@types/node": "^16.11.27",
+    "@vercel/ncc": "^0.33.4",
     "ts-lint": "^4.5.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.6.3"
   }
 }
